# dotbootstrap

./: Cargo.toml  README.md
src/: dotbootstrap.rs  dotignore.rs  main.rs
src/crawlers/: crawler.rs  dotfile_crawler.rs  mod.rs
