[package]
name = "dotbootstrap"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Montgomery"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.15"
colored = "2.0.0"
dirs = "4.0.0"
env_logger = "0.9.0"
log = "0.4.17"
regex = "1.6.0"
